--- a/DoorBell_Cast-And-Companion.yaml
+++ b/DoorBell_Cast-And-Companion.yaml
@@ -24,7 +24,7 @@ blueprint:
       default: ""
     message:
       name: Message (Optional)
-      description: 'default: "There is Somebody at the Door!"'
+      description: Default: "There is Somebody at the Door!"
       default: "There is Somebody at the Door!"
     cameras:
       name: Cameras
@@ -44,11 +44,11 @@ blueprint:
           multiple: true
     notification_title:
       name: Notification title (Optional)
-      description: 'default: "There is Somebody at the Door!"'
+      description: 'Default: "There is Somebody at the Door!"'
       default: "There is Somebody at the Door!"
     notification_message:
       name: Notification message (Optional)
-      description: 'default: "There is Somebody at the Door!"'
+      description: 'Default: "There is Somebody at the Door!"'
       default: "There is Somebody at the Door!"
     delay:
       name: Delay (Optional)
@@ -84,23 +84,23 @@ blueprint:
     - delay: "{{ delay }}"
 
     - choose:
-        - conditions:
-            - condition: template
-              value: "{{ trigger.platform.entity_id == 'binary_sensor.doorbell_front' }}"
+      - conditions:
+          - condition: template
+            value: "{{ trigger.platform.entity_id == 'binary_sensor.doorbell_front' }}"
             sequence:
-              - service: camera.snapshot
-                entity_id: "{{ cameras[0] }}"
-                data:
-                  filename: "{{ snapshot_create_file_path }}"
-        - conditions:
-            - condition: template
-              value: "{{ trigger.platform.entity_id == 'binary_sensor.doorbell_back' }}"
+            - service: camera.snapshot
+              entity_id: "{{ cameras[0] }}"
+              data:
+                filename: "{{ snapshot_create_file_path }}"
+      - conditions:
+          - condition: template
+            value: "{{ trigger.platform.entity_id == 'binary_sensor.doorbell_back' }}"
             sequence:
-              - service: camera.snapshot
-                entity_id: "{{ cameras[1] }}"
-                data:
-                  filename: "{{ snapshot_create_file_path }}"
-        # Add more conditions for additional doorbells and cameras as needed
+            - service: camera.snapshot
+              entity_id: "{{ cameras[1] }}"
+              data:
+                filename: "{{ snapshot_create_file_path }}"
+      # Add more conditions for additional doorbells and cameras as needed
 
     - template: "{{ for device in notify_devices ~ ',' if loop.index > 0 }}{{ device }}{{ endfor }}"
       variable_name: device_list
