--- a/DoorBell_Cast-And-Companion.yaml
+++ b/DoorBell_Cast-And-Companion.yaml
@@ -12,9 +12,9 @@ blueprint:
           multiple: true
           filter:
             include:
-              - domain: binary_sensor  # Include binary sensors (e.g., doorbells)
-              - domain: sensor         # Include other sensors if needed
-              - domain: switch         # Include switches if needed
+              - domain: binary_sensor
+              - domain: sensor
+              - domain: switch
               # Add more domains as necessary, e.g., light, device_tracker, etc.
 
     google_devices:
