--- a/DoorBell_Cast-And-Companion.yaml
+++ b/DoorBell_Cast-And-Companion.yaml
@@ -1,19 +1,17 @@
 blueprint:
-  name: Notification with Snapshot (Multiple Devices, Multiple Cameras)
-  description: Announce on Google devices and send camera snapshots to app when a specified entity changes state.
+  name: Doorbell Notification with Snapshot (Multiple Devices, Multiple Cameras)
+  description: Announce on Google devices and send camera snapshots to app when a doorbell is pressed.
   domain: automation
 
   input:
-    monitored_entities:
-      name: Monitored Entities
-      description: Select the entities to monitor (multiple allowed).
+    doorbells:
+      name: Doorbells
+      description: Select the binary sensors representing your doorbells (multiple allowed).
       selector:
         entity:
+          domain: binary_sensor
           multiple: true
-          filter:
-            include:
-              - domain: binary_sensor
-
+          
     google_devices:
       name: Google Devices
       description: The Google devices to make the announcement on (multiple allowed).
@@ -21,12 +19,12 @@ blueprint:
         entity:
           domain: media_player
           multiple: true
-
+          
     message:
       name: Message (Optional)
       description: "Default: \"There is Somebody at the Door!\""
       default: "There is Somebody at the Door!"
-
+      
     cameras:
       name: Cameras
       description: Select the cameras to use for snapshots (multiple allowed).
@@ -34,7 +32,7 @@ blueprint:
         entity:
           domain: camera
           multiple: true
-
+          
     notify_devices:
       name: Devices to Notify (Mobile App)
       description: Devices running the Home Assistant app to receive notifications (multiple allowed).
@@ -42,17 +40,17 @@ blueprint:
         device:
           integration: mobile_app
           multiple: true
-
+          
     notification_title:
       name: Notification Title (Optional)
       description: "Default: \"There is Somebody at the Door!\""
       default: "There is Somebody at the Door!"
-
+      
     notification_message:
       name: Notification Message (Optional)
       description: "Default: \"There is Somebody at the Door!\""
       default: "There is Somebody at the Door!"
-
+      
     delay:
       name: Delay (Optional)
       description: Wait before creating camera snapshot (in seconds).
@@ -68,7 +66,7 @@ mode: single
 
 trigger:
   - platform: state
-    entity_id: !input monitored_entities
+    entity_id: !input doorbells
     from: "off"
     to: "on"
 
@@ -101,8 +99,18 @@ action:
               entity_id: "{{ cameras[0] }}"
             data:
               filename: "{{ snapshot_create_file_path }}"
-
-      # Add more conditions for additional entities and corresponding camera actions as needed.
+      
+      - conditions:
+          - condition: template
+            value: "{{ trigger.entity_id == 'binary_sensor.doorbell_back' }}"
+        sequence:
+          - service: camera.snapshot
+            target:
+              entity_id: "{{ cameras[1] }}"
+            data:
+              filename: "{{ snapshot_create_file_path }}"
+      
+      # Add more conditions for additional doorbells and cameras as needed.
 
   - service: notify.mobile_app
     target:
