--- a/DoorBell_Cast-And-Companion.yaml
+++ b/DoorBell_Cast-And-Companion.yaml
@@ -1,84 +1,3 @@
-blueprint:
-  name: Doorbell Notification with Snapshot (Multiple Devices, Multiple Cameras)
-  description: Announce on Google devices and send camera snapshots to app when a doorbell is pressed.
-  domain: automation
-
-  input:
-    doorbells:
-      name: Doorbells
-      description: Select the binary sensors representing your doorbells (multiple allowed).
-      selector:
-        entity:
-          domain: binary_sensor
-          multiple: true
-          
-    google_devices:
-      name: Google Devices
-      description: The Google devices to make the announcement on (multiple allowed).
-      selector:
-        entity:
-          domain: media_player
-          multiple: true
-          
-    message:
-      name: Message (Optional)
-      description: "Default: \"There is Somebody at the Door!\""
-      default: "There is Somebody at the Door!"
-      
-    cameras:
-      name: Cameras
-      description: Select the cameras to use for snapshots (multiple allowed).
-      selector:
-        entity:
-          domain: camera
-          multiple: true
-          
-    notify_devices:
-      name: Devices to Notify (Mobile App)
-      description: Devices running the Home Assistant app to receive notifications (multiple allowed).
-      selector:
-        device:
-          integration: mobile_app
-          multiple: true
-          
-    notification_title:
-      name: Notification Title (Optional)
-      description: "Default: \"There is Somebody at the Door!\""
-      default: "There is Somebody at the Door!"
-      
-    notification_message:
-      name: Notification Message (Optional)
-      description: "Default: \"There is Somebody at the Door!\""
-      default: "There is Somebody at the Door!"
-      
-    delay:
-      name: Delay (Optional)
-      description: Wait before creating camera snapshot (in seconds).
-      default: 0
-      selector:
-        number:
-          min: 0
-          max: 60
-          unit_of_measurement: seconds
-          mode: slider
-
-mode: single
-
-trigger:
-  - platform: state
-    entity_id: !input doorbells
-    from: "off"
-    to: "on"
-
-variables:
-  cameras: !input cameras
-  notify_devices: !input notify_devices
-  notification_title: !input notification_title
-  notification_message: !input notification_message
-  delay: !input delay
-  snapshot_create_file_path: "/config/www/tmp/snapshot_{{ trigger.entity_id.split('.')[-1] }}.jpg"
-  snapshot_access_file_path: "{{ snapshot_create_file_path | replace('/config/www','/local') }}"
-
 action:
   - service: tts.google_translate_say
     data:
@@ -90,9 +9,8 @@ action:
 
   - choose:
       - conditions:
-          - condition: state
-            entity_id: "{{ trigger.entity_id }}"
-            state: "on"
+          - condition: template
+            value: "{{ trigger.entity_id }}"
         sequence:
           - service: camera.snapshot
             target:
