--- a/DoorBell_Cast-And-Companion.yaml
+++ b/DoorBell_Cast-And-Companion.yaml
@@ -79,17 +79,19 @@ variables:
   snapshot_create_file_path: "/config/www/tmp/snapshot_{{ trigger.entity_id.split('.')[-1] }}.jpg"
   snapshot_access_file_path: "{{ snapshot_create_file_path | replace('/config/www','/local') }}"
   
-  # Determine which camera to use based on the doorbell triggered
+  # Ensure a valid camera entity is chosen based on the doorbell triggered
   camera_entity: >
     {% if trigger.entity_id == 'binary_sensor.doorbell_front' and cameras|length > 0 %}
       {{ cameras[0] }}
     {% elif trigger.entity_id == 'binary_sensor.doorbell_back' and cameras|length > 1 %}
       {{ cameras[1] }}
+    {% elif cameras|length > 0 %}
+      {{ cameras[0] }}  # Fallback to the first camera if available
     {% else %}
-      {{ cameras[0] if cameras|length > 0 else '' }}  # Fallback to the first camera if available
+      ''  # Empty if no valid camera found
     {% endif %}
     
-  # Construct camera stream URL only if we have a valid camera_entity
+  # Construct camera stream URL only if a valid camera_entity is found
   camera_stream_url: "{{ '/lovelace-camera/' ~ camera_entity.split('.')[-1] if camera_entity }}"
 
 action:
